# MailMining

./: CMakeLists.txt  README.ml  TODO
cmake/Modules/: FindGlibmm.cmake  FindLibXML++.cmake
libs/: .gp_xmlSaxParser.cpp.swp  CMakeLists.txt  Makefile  gp_xmlSaxParser.cpp  gp_xmlSaxParser.h
src/: .http_client_async.cpp.swp  CMakeLists.txt  IListenable.h  IListener.h  Makefile  a.out  cmake_install.cmake  fDataAnalyzer.cpp  fDataAnalyzer.h  fParser.cpp  fParser.h  fincalStructs.h  http_client_async.cpp  httptimer.cpp  httptimer.h  logger.h  main.cpp  outputsProcessor.cpp  outputsProcessor.h  test.csv
src/binary/http_grabber.dir/: CXX.includecache  DependInfo.cmake  build.make  depend.internal  link.txt
test/: #table.csv?s=XKE&d=0&e=2&f=2013&g=d&a=7&b19&c=2002&ignore=.csv#  getDatas.sh  list_url_financial_datas.txt  rem.txt
